--- a/server/djangoapp/templates/base_template.html
+++ b/server/djangoapp/templates/base_template.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Best Cars {% block title %}
         {% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -35,21 +38,36 @@
               <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact us</a>
             </li>
           </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Username">
-            <input class="form-control mr-sm-2" type="password" placeholder="Password">
-            <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Login</button>
-          </form>
+              {% if user.is_authenticated %}
+                <a class="btn">Hi, <strong class="text-uppercase"> {{ user.username }} </strong></a>
+                <a class="btn btn-outline-dark" href="{% url 'djangoapp:logout' %}">Logout</a>              
+              {% else %}
+              <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                  {% csrf_token %}
+                  <div class="input-group">
+                      <input type="text" class="form-control mr-1" placeholder="Username" name="username" required>
+                      <input type="password" class="form-control mr-1" placeholder="Password" name="psw" required>
+                      <button class="btn btn-primary mr-1" type="submit">Login</button>
+                      <a class="btn btn-outline-dark" href="{% url 'djangoapp:registration' %}">Sign Up</a>
+                  </div>
+              </form>
+              {% endif %}
         </div>
       </div>
       </nav>
     <!--Add a dealer table here -->
+      {% if message %}
+        <div class="alert alert-warning text-center" role="alert">
+          <strong>{{ message }}</strong>
+        </div>
+      {% endif %}
+
     {% block content %}
 
     {% endblock %}
 
     <!-- Footer -->
-    <footer class="bg-light pt-1">
+    <footer class="bg-light pt-1 fixed-bottom">
       <div class="container">
         <ul class="nav justify-content-center">
           <li class="nav-item">
