--- a/server/djangoapp/templates/djangoapp/dealer_details.html
+++ b/server/djangoapp/templates/djangoapp/dealer_details.html
@@ -1,18 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    {% load static %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-</head>
+{% extends 'base_template.html' %}
+{% block title %}Dealer detail and reviews{% endblock %}
 
-    <body>
-
-    <!--Add a nav bar here -->
+{% block content %}
+<div class="container mt-2">
+    <div class="card bg-dark text-light">
+        <div class="card-body">
+          <h4 class="card-title">{{ detail.full_name}}</h4>
+          <p class="m-0">{{ detail.address }}, {{ detail.city }}, {{ detail.zip }}, {{ detail.st }}</p>
+        </div>
+    </div>
+    {% if user.is_authenticated %}
+        <a class="btn btn-primary m-2" href="{% url 'djangoapp:add_review' detail.id %}" role="button">Add your review</a>
+    {% else %}
+        <p class="alert alert-light m-2">login in to review.</p>
+    {% endif %}
 
     <!-- Add reviews as cards -->
-
-    </body>
-
-</html>
+    <h4 class="alert alert-light">Reviews:</h4>
+        {% if reviews %}
+            {% for review in reviews %}
+                <div class="row">
+                    <div class="col-8">
+                        <div class="card border-light mb-3">
+                            <div class="card-body">
+                                <img style="width:50px;" class="float-left mr-4"
+                                {% if  review.sentiment == "neutral" %}
+                                    src="{{MEDIA_URL}}/emoji/neutral.png" alt="neutral"
+                                {% elif review.sentiment == "positive" %}
+                                    src="{{MEDIA_URL}}/emoji/positive.png" alt="positive"
+                                {% elif review.sentiment == "negative" %}
+                                    src="{{MEDIA_URL}}/emoji/negative.png" alt="negative"
+                                {% endif %}
+                                >
+                                <h4 class="card-title">{{ review.review }}</h4>
+                                <p class="card-text"><em> from: {{ review.name }}</em></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        {% if review.purchase == True %}
+                            <h4 class="alert alert-success m-0"><strong> {{ review.car_make }} >>> {{ review.car_model }} >>> {{ review.car_year }} </strong>
+                            <br /><span> <small>Purchase date: {{ review.purchase_date }} </small></span></h4>
+                        {% else %}
+                                <h5 class="alert alert-warning">Car not purchased from this dealership</h5>
+                        {% endif %}
+                    </div>
+                </div>
+                <hr />
+                {% endfor %}             
+            {% else %}
+                <h4 class="alret alert-dark">No reviews yet for this dealership.</h4>
+            {% endif %}
+        </div>
+    </div>
+</div>
+{% endblock  %}
